[gd_scene load_steps=7 format=3 uid="uid://baexyjphxwd6x"]

[ext_resource type="Script" path="res://Personnages/pretre/pretre.gd" id="1_1dx6i"]
[ext_resource type="Script" path="res://Personnages/pretre/CorpsPretre.gd" id="2_7eevs"]
[ext_resource type="SpriteFrames" uid="uid://77f404xcwy5x" path="res://Personnages/pretre/pretreAnimation.tres" id="3_8xbwh"]
[ext_resource type="LabelSettings" uid="uid://dnouf360rvrr0" path="res://InterfaceUtilisateur/Labels Settings/LabelSetting_CharacterLabel.tres" id="4_cur1q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fp5oo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rcmmc"]
radius = 100.0

[node name="pretre" type="Area2D"]
script = ExtResource("1_1dx6i")

[node name="CorpsNPC" type="CharacterBody2D" parent="."]
collision_layer = 4
script = ExtResource("2_7eevs")

[node name="TimerAnimation" type="Timer" parent="CorpsNPC"]

[node name="AnimationNPC" type="AnimatedSprite2D" parent="CorpsNPC"]
scale = Vector2(1.2, 1.35)
sprite_frames = ExtResource("3_8xbwh")
animation = &"idle"
autoplay = "idle"
flip_h = true

[node name="Hitbox" type="CollisionShape2D" parent="CorpsNPC"]
position = Vector2(0, 4.5)
shape = SubResource("CapsuleShape2D_fp5oo")

[node name="TimerCorrectionAnimation" type="Timer" parent="CorpsNPC"]

[node name="Zone_Detection_Joueur" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rcmmc")

[node name="Nom" type="Label" parent="."]
offset_left = -20.0
offset_top = -46.0
offset_right = 20.0
offset_bottom = -23.0
label_settings = ExtResource("4_cur1q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerDetection" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="CorpsNPC/TimerAnimation" to="CorpsNPC" method="_on_timer_animation_timeout"]
[connection signal="timeout" from="CorpsNPC/TimerCorrectionAnimation" to="CorpsNPC" method="_on_timer_correction_animation_timeout"]
